<resources>
    <string name="app_name">E-Aluno</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="template_msg_obrigatorio">%s obrigatório!</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="confirmar">Confirmar</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="iesb">IESB</string>
    <string name="senha_diferente">Senha diferente!</string>

    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="matricula">Matrícula</string>
    <string name="foto">Foto</string>

    <string name="senha_invalido">A senha deve ter no mínimo: \n 1) 6 caracteres. \n 2) Ao  menos 1 caractere Maíusculo. \n 3) Um caractere especial. \n 4) Pelo menos 1 número.</string>
    <string name="email_invalido">E-mail inválido!</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="msg_usuario_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="msg_aluno_sucesso">Aluno alterado com sucesso!</string>
    <string name="minha_conta">Minha conta</string>
    <string name="alunos">Alunos</string>
    <string name="noticias">Notícias</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="sair">sair</string>
    <string name="bate_papo">Bate-Papo IESB</string>
    <string name="mensagem">mensagem</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>
